--- a/app/src/main/res/layout/pop_hot.xml
+++ b/app/src/main/res/layout/pop_hot.xml
@@ -127,6 +127,7 @@
             android:layout_height="40dp"
             android:layout_marginTop="270dp"
             android:layout_marginLeft="140dp"
-            android:entries="@array/hotstart"/>
+            android:entries="@array/hotstart"
+            android:spinnerMode="dialog"/>
 
 </RelativeLayout>
