--- a/app/src/main/res/layout/activity_charts1.xml
+++ b/app/src/main/res/layout/activity_charts1.xml
@@ -29,7 +29,7 @@
                 android:background="?attr/colorPrimary"/>
     </com.google.android.material.appbar.AppBarLayout>
 
-    <com.demo.aircontrol.NoScrollViewPager
+    <com.demo.aircontrol.ui.util.NoScrollViewPager
             android:id="@+id/view_pager"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
