--- a/app/src/main/res/layout/activity_charts3.xml
+++ b/app/src/main/res/layout/activity_charts3.xml
@@ -1,39 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout
+<androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:theme="@style/NoActionBar"
         tools:context=".Charts3Activity">
 
     <com.google.android.material.appbar.AppBarLayout
+            android:id="@+id/appbar"
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
-            android:theme="@style/AppTheme.AppBarOverlay">
-
-        <!--        <TextView-->
-        <!--                android:id="@+id/title"-->
-        <!--                android:layout_width="wrap_content"-->
-        <!--                android:layout_height="wrap_content"-->
-        <!--                android:gravity="center"-->
-        <!--                android:minHeight="?actionBarSize"-->
-        <!--                android:padding="@dimen/appbar_padding"-->
-        <!--                android:text="@string/app_name"-->
-        <!--                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"/>-->
-
+            android:theme="@style/AppTheme.AppBarOverlay" app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
+    >
         <com.google.android.material.tabs.TabLayout
-                android:id="@+id/tabs3"
+                android:id="@+id/tabs"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="?attr/colorPrimary"/>
     </com.google.android.material.appbar.AppBarLayout>
 
-    <com.demo.aircontrol.NoScrollViewPager
-            android:id="@+id/view_pager3"
+    <com.demo.aircontrol.ui.util.NoScrollViewPager
+            android:id="@+id/view_pager"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
             android:isScrollContainer="false"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/appbar"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+    >
 
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+    </com.demo.aircontrol.ui.util.NoScrollViewPager>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
