--- a/app/src/main/res/layout/activity_charts1.xml
+++ b/app/src/main/res/layout/activity_charts1.xml
@@ -1,39 +1,163 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout
+<androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:ap="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".Charts1Activity">
 
+
     <com.google.android.material.appbar.AppBarLayout
+            android:id="@+id/appbar"
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
-            android:theme="@style/AppTheme.AppBarOverlay">
-
-        <!--        <TextView-->
-        <!--                android:id="@+id/title"-->
-        <!--                android:layout_width="wrap_content"-->
-        <!--                android:layout_height="wrap_content"-->
-        <!--                android:gravity="center"-->
-        <!--                android:minHeight="?actionBarSize"-->
-        <!--                android:padding="@dimen/appbar_padding"-->
-        <!--                android:text="@string/app_name"-->
-        <!--                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"/>-->
-
-        <com.google.android.material.tabs.TabLayout
-                android:id="@+id/tabs"
-                android:layout_width="match_parent"
+            android:theme="@style/AppTheme.AppBarOverlay" app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
+    >
+        <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_height="wrap_content"
-                android:background="?attr/colorPrimary"/>
+                android:layout_width="match_parent"
+        >
+            <Button
+                    android:text="开始"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" android:id="@+id/button_play"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
+                    app:layout_constraintEnd_toStartOf="@+id/button_pause"/>
+            <Button
+                    android:text="暂停"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" android:id="@+id/button_pause"
+                    app:layout_constraintStart_toEndOf="@+id/button_play" app:layout_constraintHorizontal_bias="0.5"
+                    app:layout_constraintEnd_toStartOf="@+id/button_replay"
+                    app:layout_constraintTop_toTopOf="@+id/button_play"/>
+            <Button
+                    android:text="重置"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" android:id="@+id/button_replay"
+                    app:layout_constraintStart_toEndOf="@+id/button_pause" app:layout_constraintHorizontal_bias="0.5"
+                    app:layout_constraintTop_toTopOf="@+id/button_pause"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
     </com.google.android.material.appbar.AppBarLayout>
-
-    <com.demo.aircontrol.ui.util.NoScrollViewPager
-            android:id="@+id/view_pager"
+    <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/constraintLayout"
+            android:layout_height="0dp"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:isScrollContainer="false"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+            app:layout_constraintTop_toBottomOf="@id/appbar"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_bias="1.0" app:layout_constraintVertical_bias="0.0">
+        <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/chart1_layout"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="@id/guideline"
+                app:layout_constraintBottom_toTopOf="@id/chart1_text"
+                app:layout_constraintVertical_weight="2"
 
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+        >
+
+            <!--chart here-->
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+                android:background="@color/off_white"
+                android:id="@+id/chart1_text"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:minHeight="30dp"
+                app:layout_constraintTop_toBottomOf="@id/chart1_layout"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="@id/guideline"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintVertical_weight="1"
+
+        >
+            <TextView android:layout_width="match_parent" android:layout_height="match_parent"
+                      android:text="text"
+            />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
+                                                    android:layout_height="wrap_content"
+                                                    android:id="@+id/guideline"
+                                                    android:orientation="vertical"
+                                                    app:layout_constraintGuide_percent="0.5"/>
+        <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/chart2_layout"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="@id/guideline"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toTopOf="@id/chart2_text"
+                app:layout_constraintVertical_weight="2"
+
+        >
+            <!--chart here-->
+            <com.androidplot.xy.XYPlot
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    style="@style/APDefacto.Light"
+                    android:id="@+id/plot"
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent"
+                    ap:title="当前高度"
+                    ap:rangeTitle="高度"
+                    ap:domainTitle="时间"
+                    ap:lineLabels="left|bottom"
+                    ap:lineLabelRotationBottom="-45"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+                android:background="@color/off_white"
+                android:id="@+id/chart2_text"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:minHeight="30dp"
+                app:layout_constraintTop_toBottomOf="@id/chart2_layout"
+                app:layout_constraintStart_toStartOf="@id/guideline"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintVertical_weight="1"
+
+        >
+            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
+                      android:text="当前时间："
+                      android:id="@+id/textView4"
+                      app:layout_constraintTop_toTopOf="parent"
+                      app:layout_constraintBottom_toTopOf="@+id/text_time"
+                      app:layout_constraintStart_toStartOf="@+id/text_time"/>
+            <TextView android:id="@+id/text_time"
+                      android:layout_width="wrap_content" android:layout_height="wrap_content"
+                      android:text="0"
+                      app:layout_constraintTop_toBottomOf="@+id/textView4"
+                      app:layout_constraintBottom_toTopOf="@+id/textView5"
+                      app:layout_constraintStart_toStartOf="@+id/textView5"/>
+            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
+                      android:text="当前高度："
+                      android:id="@+id/textView5"
+                      app:layout_constraintTop_toBottomOf="@+id/text_time"
+                      app:layout_constraintBottom_toTopOf="@+id/text_alt"
+                      app:layout_constraintStart_toStartOf="@+id/text_alt"/>
+            <TextView android:id="@+id/text_alt"
+                      android:layout_width="wrap_content" android:layout_height="wrap_content"
+                      android:text="0"
+                      app:layout_constraintBottom_toBottomOf="parent"
+                      app:layout_constraintTop_toBottomOf="@+id/textView5" app:layout_constraintStart_toStartOf="parent"
+                      android:layout_marginStart="20dp"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
