--- a/app/src/main/res/layout/activity_charts1.xml
+++ b/app/src/main/res/layout/activity_charts1.xml
@@ -65,6 +65,16 @@
         >
 
             <!--chart here-->
+            <com.androidplot.xy.XYPlot
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    style="@style/APDefacto.Light"
+                    android:id="@+id/scatter"
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent"
+                    ap:title="轨迹图"
+                    ap:rangeTitle="y"
+                    ap:domainTitle="x"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -81,9 +91,67 @@
                 app:layout_constraintVertical_weight="1"
 
         >
-            <TextView android:layout_width="match_parent" android:layout_height="match_parent"
-                      android:text="text"
-            />
+            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
+                      app:layout_constraintTop_toTopOf="parent"
+                      app:layout_constraintStart_toStartOf="parent"
+                      app:layout_constraintBottom_toTopOf="@id/t2"
+                      android:layout_marginTop="16dp"
+                      android:layout_marginStart="16dp"
+                      android:text="当前偏航角："
+                      android:id="@+id/t1"
+                      tools:layout_editor_absoluteY="19dp" tools:layout_editor_absoluteX="20dp"/>
+            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
+                      app:layout_constraintTop_toBottomOf="@id/t1"
+                      app:layout_constraintStart_toStartOf="@id/t1"
+                      app:layout_constraintBottom_toTopOf="@id/t2"
+                      android:text="当前俯仰角："
+                      android:id="@+id/t2"/>
+            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
+                      app:layout_constraintTop_toBottomOf="@id/t2"
+                      app:layout_constraintStart_toStartOf="@id/t2"
+                      app:layout_constraintBottom_toTopOf="@id/t4"
+                      android:text="当前横滚角："
+                      android:id="@+id/t3"/>
+            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
+                      app:layout_constraintTop_toBottomOf="@id/t3"
+                      app:layout_constraintStart_toStartOf="@id/t3"
+                      app:layout_constraintBottom_toTopOf="@id/t5"
+                      android:text="当前X坐标："
+                      android:id="@+id/t4"/>
+            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
+                      app:layout_constraintTop_toBottomOf="@id/t4"
+                      app:layout_constraintStart_toStartOf="@id/t4"
+                      app:layout_constraintBottom_toBottomOf="parent"
+                      android:layout_marginBottom="8dp"
+                      android:text="当前Y坐标："
+                      android:id="@+id/t5"/>
+
+            <TextView android:id="@+id/tt1"
+                      app:layout_constraintTop_toTopOf="@id/t1"
+                      app:layout_constraintStart_toEndOf="@id/t1"
+                      android:layout_width="wrap_content" android:layout_height="wrap_content"
+                      android:text="0"/>
+            <TextView android:id="@+id/tt2"
+                      app:layout_constraintTop_toTopOf="@id/t2"
+                      app:layout_constraintStart_toEndOf="@id/t2"
+                      android:layout_width="wrap_content" android:layout_height="wrap_content"
+                      android:text="0"/>
+            <TextView android:id="@+id/tt3"
+                      app:layout_constraintTop_toTopOf="@id/t3"
+                      app:layout_constraintStart_toEndOf="@id/t3"
+                      android:layout_width="wrap_content" android:layout_height="wrap_content"
+                      android:text="0"/>
+            <TextView android:id="@+id/tt4"
+                      app:layout_constraintTop_toTopOf="@id/t4"
+                      app:layout_constraintStart_toEndOf="@id/t4"
+                      android:layout_width="wrap_content" android:layout_height="wrap_content"
+                      android:text="0"/>
+            <TextView android:id="@+id/tt5"
+                      app:layout_constraintTop_toTopOf="@id/t5"
+                      app:layout_constraintStart_toEndOf="@id/t5"
+                      android:layout_width="wrap_content" android:layout_height="wrap_content"
+                      android:text="0"/>
+
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -133,29 +201,32 @@
 
         >
             <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
+                      app:layout_constraintTop_toTopOf="parent"
+                      app:layout_constraintStart_toStartOf="parent"
+                      android:layout_marginTop="16dp"
+                      android:layout_marginStart="16dp"
                       android:text="当前时间："
                       android:id="@+id/textView4"
-                      app:layout_constraintTop_toTopOf="parent"
-                      app:layout_constraintBottom_toTopOf="@+id/text_time"
-                      app:layout_constraintStart_toStartOf="@+id/text_time"/>
+                      tools:layout_editor_absoluteY="19dp" tools:layout_editor_absoluteX="20dp"/>
             <TextView android:id="@+id/text_time"
+                      app:layout_constraintTop_toTopOf="@id/textView4"
+                      app:layout_constraintStart_toEndOf="@id/textView4"
                       android:layout_width="wrap_content" android:layout_height="wrap_content"
                       android:text="0"
-                      app:layout_constraintTop_toBottomOf="@+id/textView4"
-                      app:layout_constraintBottom_toTopOf="@+id/textView5"
-                      app:layout_constraintStart_toStartOf="@+id/textView5"/>
+                      tools:layout_editor_absoluteY="56dp" tools:layout_editor_absoluteX="20dp"/>
             <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
+                      app:layout_constraintTop_toBottomOf="@id/textView4"
+                      app:layout_constraintStart_toStartOf="@id/textView4"
+                      android:layout_marginTop="16dp"
                       android:text="当前高度："
                       android:id="@+id/textView5"
-                      app:layout_constraintTop_toBottomOf="@+id/text_time"
-                      app:layout_constraintBottom_toTopOf="@+id/text_alt"
-                      app:layout_constraintStart_toStartOf="@+id/text_alt"/>
+                      tools:layout_editor_absoluteY="92dp" tools:layout_editor_absoluteX="20dp"/>
             <TextView android:id="@+id/text_alt"
+                      app:layout_constraintStart_toEndOf="@id/textView5"
+                      app:layout_constraintTop_toTopOf="@id/textView5"
                       android:layout_width="wrap_content" android:layout_height="wrap_content"
                       android:text="0"
-                      app:layout_constraintBottom_toBottomOf="parent"
-                      app:layout_constraintTop_toBottomOf="@+id/textView5" app:layout_constraintStart_toStartOf="parent"
-                      android:layout_marginStart="20dp"/>
+                      tools:layout_editor_absoluteY="131dp" tools:layout_editor_absoluteX="20dp"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
