--- a/app/src/main/res/layout/activity_charts1.xml
+++ b/app/src/main/res/layout/activity_charts1.xml
@@ -44,6 +44,7 @@
 
     </com.google.android.material.appbar.AppBarLayout>
     <androidx.constraintlayout.widget.ConstraintLayout
+            android:background="@color/off_white"
             android:id="@+id/constraintLayout"
             android:layout_height="0dp"
             android:layout_width="match_parent"
@@ -62,7 +63,7 @@
                 app:layout_constraintBottom_toTopOf="@id/chart1_text"
                 app:layout_constraintVertical_weight="2"
 
-        >
+                app:layout_constraintDimensionRatio="1:1">
 
             <!--chart here-->
             <com.androidplot.xy.XYPlot
@@ -72,6 +73,11 @@
                     android:id="@+id/scatter"
                     android:layout_width="fill_parent"
                     android:layout_height="fill_parent"
+                    ap:gridInsetBottom="-10dp"
+                    ap:lineLabelInsetBottom="-20dp"
+                    ap:lineLabelTextSizeBottom="10dp"
+                    ap:lineLabelTextSizeLeft="10dp"
+                    ap:lineLabels="left|bottom"
                     ap:title="轨迹图"
                     ap:rangeTitle="y"
                     ap:domainTitle="x"/>
@@ -84,7 +90,7 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:minHeight="30dp"
-                app:layout_constraintTop_toBottomOf="@id/chart1_layout"
+                app:layout_constraintTop_toTopOf="@id/chart2_text"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="@id/guideline"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -98,12 +104,11 @@
                       android:layout_marginTop="16dp"
                       android:layout_marginStart="16dp"
                       android:text="当前偏航角："
-                      android:id="@+id/t1"
-                      tools:layout_editor_absoluteY="19dp" tools:layout_editor_absoluteX="20dp"/>
+                      android:id="@+id/t1"/>
             <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                       app:layout_constraintTop_toBottomOf="@id/t1"
                       app:layout_constraintStart_toStartOf="@id/t1"
-                      app:layout_constraintBottom_toTopOf="@id/t2"
+                      app:layout_constraintBottom_toTopOf="@id/t3"
                       android:text="当前俯仰角："
                       android:id="@+id/t2"/>
             <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
