--- a/app/src/main/res/layout/activity_charts2.xml
+++ b/app/src/main/res/layout/activity_charts2.xml
@@ -61,7 +61,7 @@
                   android:paddingStart="0dp"
                   android:paddingEnd="0dp"
                   app:layout_constraintHorizontal_chainStyle="packed"
-                  android:text="偏航角：" app:layout_constraintStart_toStartOf="parent"
+                  android:text="俯仰角：" app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/text2"
                   tools:layout_editor_absoluteY="16dp"/>
         <TextView android:layout_width="wrap_content"
@@ -80,7 +80,7 @@
                   android:textColor="#FFFFFF"
                   android:paddingStart="0dp"
                   android:paddingEnd="0dp"
-                  android:text="俯仰角："
+                  android:text="横滚角："
                   app:layout_constraintStart_toEndOf="@+id/text2" app:layout_constraintHorizontal_bias="0.5"
                   app:layout_constraintEnd_toStartOf="@+id/text4"
                   app:layout_constraintTop_toTopOf="@+id/text2"/>
@@ -100,7 +100,7 @@
                   android:textColor="#FFFFFF"
                   android:paddingStart="0dp"
                   android:paddingEnd="0dp"
-                  android:text="横滚角："
+                  android:text="偏航角："
                   app:layout_constraintStart_toEndOf="@+id/text4" app:layout_constraintHorizontal_bias="0.5"
                   app:layout_constraintEnd_toStartOf="@+id/text6"
                   app:layout_constraintTop_toTopOf="@+id/text4"/>
