--- a/app/src/main/res/layout/activity_charts2_old.xml
+++ b/app/src/main/res/layout/activity_charts2_old.xml
@@ -8,7 +8,7 @@
     <com.google.android.material.appbar.AppBarLayout
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
-            android:theme="@style/AppTheme.AppBarOverlay">
+            android:theme="@style/AppTheme.AppBarOverlay" android:id="@+id/appBarLayout">
 
         <!--        <TextView-->
         <!--                android:id="@+id/title"-->
@@ -20,18 +20,19 @@
         <!--                android:text="@string/app_name"-->
         <!--                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"/>-->
 
-        <com.google.android.material.tabs.TabLayout
-                android:id="@+id/tabs"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="?attr/colorPrimary"/>
     </com.google.android.material.appbar.AppBarLayout>
 
-    <com.demo.aircontrol.ui.util.NoScrollViewPager
+    <com.demo.aircontrol.util.ui.NoScrollViewPager
             android:id="@+id/view_pager"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:isScrollContainer="false"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+    <com.google.android.material.tabs.TabLayout
+            android:id="@+id/tabs"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="?attr/colorPrimary" app:layout_anchorGravity="center"
+            app:layout_anchor="@+id/appBarLayout"/>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
