--- a/app/src/main/res/layout/activity_charts3.xml
+++ b/app/src/main/res/layout/activity_charts3.xml
@@ -22,7 +22,7 @@
                 android:background="?attr/colorPrimary"/>
     </com.google.android.material.appbar.AppBarLayout>
 
-    <com.demo.aircontrol.ui.util.NoScrollViewPager
+    <com.demo.aircontrol.util.ui.NoScrollViewPager
             android:id="@+id/view_pager"
             android:layout_width="match_parent"
             android:layout_height="0dp"
@@ -34,6 +34,6 @@
             app:layout_constraintBottom_toBottomOf="parent"
     >
 
-    </com.demo.aircontrol.ui.util.NoScrollViewPager>
+    </com.demo.aircontrol.util.ui.NoScrollViewPager>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
