--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="DJIbackground_blue">#242d34</color>
     <color name="DJItransparent">#00000000</color>
     <color name="DJIdark_gray">#80000000</color>
+    <color name="backgroundColor">#FAFAFA</color>
 </resources>
